# WorkMate

./: .gitignore  CLAUDE.md  需求.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: admin.py  auth.py  chat.py  conversations.py  datasources.py  feishu.py  router.py  skills.py
backend/app/core/: deps.py  security.py
backend/app/mcp/: registry.py  server.py
backend/app/mcp/tools/: base.py
backend/app/models/: __init__.py  conversation.py  datasource.py  message.py  skill.py  user.py
backend/app/schemas/: auth.py  chat.py  conversation.py
backend/app/services/: dify.py  feishu.py  skill_loader.py
backend/skills_store/echo_tool/: echo_skill.py  meta.json
backend/tests/: conftest.py  test_auth.py  test_conversations.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: admin.ts  auth.ts  chat.ts  conversations.ts  datasources.ts  request.ts
frontend/src/components/: AppSidebar.vue  ChatPanel.vue  FunctionSelector.vue  MessageInput.vue  MessageItem.vue  MessageList.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  conversations.ts
frontend/src/tests/stores/: auth.spec.ts
frontend/src/views/: AdminView.vue  ChatView.vue  LoginView.vue
